--- a/Fall_2022_Lectures/Lecture_1/Intro_to_Career_Exploration.ipynb
+++ b/Fall_2022_Lectures/Lecture_1/Intro_to_Career_Exploration.ipynb
@@ -165,7 +165,7 @@
    },
    "source": [
     "<a id='section3'></a>\n",
-    "# Project Checkpoint Submissions"
+    "# Final Project/Kaggle Competition"
    ]
   },
   {
@@ -174,9 +174,9 @@
     "id": "yC2g74WxMpCl"
    },
    "source": [
-    "This semester we are going to split up the Final Project into several checkpoints. This helps create a fun and low stress way of staying on top of the material! \n",
+    "This semester we will have a final project in the form of Kaggling Competition. It will be a good way to apply whatever you have learnt from the lecture to solve a practical problem!\n",
     "\n",
-    "FINAL CHECKPOINT: The Friday before dead week (4/26)\n"
+    "We will release more details about it later.\n"
    ]
   },
   {
@@ -191,7 +191,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='section3'></a>\n",
+    "# Terminal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Previously, we have already used the terminal to unzip the course materials. Now let's learn more basic operations of it!\n",
+    "\n",
+    "Basic commands:\n",
+    "\n",
+    "* `cd path/to/directory/`: (Change Directory) change the directory that you’re currently working with to `path/to/directory/` in the Terminal in order to execute other commands on a different directory. If `path/to/directory/` is empty, i.e., you don't type anything following `cd`, it will go back to the root directory.\n",
+    "* `ls path/to/directory/`: (Listing Directory) view the contents (files and directories) inside of the `path/to/directory/` directory. If `path/to/directory/` is empty, i.e., you don't type anything following `cd`, it view the contents in the current directory.\n",
+    "* `cp filename1 filename2`: (Copy a file to another directory) copy a file from one location (`filename1`) to another location (`filename2`).\n",
+    "* `mv filename1 filename2`: (Move a file) has the same logics as `cp`, but you \"move\" instead of \"copy\".\n",
+    "* `rm filename`: (Remove a file) delete/remove `filename`. If you want to remove a (nested) folder, use `rm -rf filename`.\n",
+    "\n",
+    "Basic Symbols:\n",
+    "* `.` represents the current directory.\n",
+    "* `..` represents the parent directory.\n",
+    "* `*` represents anything. For example, `cp folder1/* folder2` means copy all the files under `folder1` to `folder2`. `rm *.csv` represents deleting all the csv files in the current directory.\n",
+    "\n",
+    "[Reference](https://www.techrepublic.com/article/16-terminal-commands-every-user-should-know/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use the commands above to do the following operations:\n",
+    "\n",
+    "1. Go to the `Excerise` directory\n",
+    "2. View the contents in the current directory. What are they?\n",
+    "3. View the contents in `Berkeley` and `Stanfurd` directory. What are they?\n",
+    "4. Go to the `Berkeley` directory\n",
+    "5. Go back to the `Excerise` directory\n",
+    "6. Remove everything in `Stanfurd`\n",
+    "7. Copy everything in `Berkeley` to `Stanfurd`\n",
+    "\n",
+    "Good job! You have turned Stanford into a Bear territory!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='section4'></a>\n",
     "# DataHub/Jupyter Notebook Guide"
    ]
   },
@@ -383,11 +429,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Run the cell below to display a dataframe."
+   ]
   },
   {
    "cell_type": "code",
@@ -728,8 +774,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='section4'></a>\n",
-    "# (Optional) Jupyter Lab Guide"
+    "<a id='section5'></a>\n",
+    "# (Optional) JupyterLab Guide"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![image](jupyterLab_interface.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "JupyterLab is the next-generation notebook Interface. The core of JupyterLab is still the jupyter notebook, but JupyterLab includes more diverse and ampful functionalities for more efficient and powerful coding.\n",
+    "\n",
+    "Here are some highlights of JupyterLab that might sound interesting to you:\n",
+    "\n",
+    "1. It extends the functionality of the classic jupyter notebook. For example, you can move a cell by using the cursor to drag it. You also have the access to a **debugger**. \n",
+    "2. It has an extra left sidebar that shows the file management system, Git, etc.\n",
+    "3. It has more customization to optimize your coding experience (e.g. splitting the screen, changing the font and interface color)\n",
+    "\n",
+    "With JupyterLab, you can code whenever and wherever you want!\n",
+    "\n",
+    "Moreover, JupyterLab is the main (or even only) interface for many cloud servers such as Amazon AWS, Lambda Could, and Saturn Cloud."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To enter the JupyterLab interace in your Berkeley DataHub, change the word `notebooks` to `lab` in the url. For example, you should change `https://datahub.berkeley.edu/user/wenhao1102/notebooks/Untitled.ipynb` to `https://datahub.berkeley.edu/user/wenhao1102/lab/Untitled.ipynb`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fun Fact\n",
+    "\n",
+    "The father of the Jupyter Notebook, [Fernando Pérez](https://statistics.berkeley.edu/people/fernando-perez) is a Professor of our Statistics department! He taught DATA 100 and STAT 159."
    ]
   },
   {
@@ -744,7 +830,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -758,7 +844,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "d1cc4350fcf3bcb4c2ea281b4f2442af074cb23d728606e92c3e52821c5418cf"
+   }
   }
  },
  "nbformat": 4,
