Updated the lecture 1 and homework 1

--- a/Fall_2022_Lectures/Lecture_1/Lecture.ipynb
+++ b/Fall_2022_Lectures/Lecture_1/Lecture.ipynb
@@ -6,7 +6,7 @@
     "id": "Lv3-OJS5MpCc"
    },
    "source": [
-    "# Lecture 1: Introduction to Datahub and Jupyter\n",
+    "# Lecture 1: Introduction to Datahub, Jupyter, and Terminal\n",
     "## 20 Sep 2022\n",
     "\n",
     "### Table Of Contents\n",
@@ -176,7 +176,9 @@
    "source": [
     "This semester we will have a final project in the form of Kaggling Competition. It will be a good way to apply whatever you have learnt from the lecture to solve a practical problem!\n",
     "\n",
-    "We will release more details about it later.\n"
+    "We will release two notebooks (one for EDA and the other one for modeling) to help you progress your data analysis. The EDA notebook will be released at 10/11, and the modeling notebook will be released at 11/01.\n",
+    "\n",
+    "The due of the entire project/competition is 12/09, which is the Friday of the RRR week. Education committee members will hold OH for the project at the week before the RRR week.\n"
    ]
   },
   {
@@ -184,7 +186,9 @@
    "metadata": {},
    "source": [
     "# Homework\n",
-    "This semester, we will be having optional homework problem sets to complement each lecture. We expect each homework set to take 1-2 hours and to serve as good independent practice for relevant topics. Although these are optional, we highly encourage you to do each and every one of them to further solidify your understanding of the material. Solutions will also be released for each homework set."
+    "This semester, we will be having **mandatory** homework problem sets to complement each lecture. We expect each homework set to take 1-2 hours and to serve as good independent practice for relevant topics. Solutions will also be released for each homework set.\n",
+    "\n",
+    "You will submit your homework solutions to the Gradescope. The instructors of each lecture will tell you the format (like pdf or notebook) of your submission."
    ]
   },
   {
