--- a/Fall_2022_Lectures/Lecture_2_Dev/Intro to Python Homework Solution - Fall 2022.ipynb
+++ b/Fall_2022_Lectures/Lecture_2_Dev/Intro to Python Homework Solution - Fall 2022.ipynb
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e60387df",
+   "id": "4a5f7260",
    "metadata": {},
    "source": [
     "**Exercise 1.5.3**:  \n",
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "e06bc5b6",
+   "id": "64984f5e",
    "metadata": {},
    "outputs": [
     {
@@ -558,9 +558,22 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "fbe1b601",
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "194f2f62",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(integer+float_)"
    ]
@@ -574,9 +587,22 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c174552d",
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "19180905",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'monkeymonkeymonkeymonkey'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "string * integer"
    ]
@@ -590,9 +616,22 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "9e11b7a7",
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "f0d11e42",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(string*integer)"
    ]
@@ -606,9 +645,23 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "fd9fd12c",
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "3b1de8e8",
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"int\") to str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [32]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mstring\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43minteger\u001b[49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
+     ]
+    }
+   ],
    "source": [
     "string+integer"
    ]
@@ -622,9 +675,22 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "ede2fe3d",
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "89dd980b",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "boolean*integer"
    ]
@@ -638,9 +704,22 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "1c913e31",
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "df784a71",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(boolean+integer)"
    ]
@@ -778,7 +857,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0390968",
+   "id": "17f81c0d",
    "metadata": {},
    "source": [
     "**Exercise 2.2.3:** Print out all the numbers between 1 and 100 that are even.  \n",
@@ -788,7 +867,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "4d41a1a6",
+   "id": "d92e80e2",
    "metadata": {
     "scrolled": true
    },
@@ -861,7 +940,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f82eba0",
+   "id": "998abdbc",
    "metadata": {},
    "source": [
     "**Exercise 2.2.4:** Drawing on your exercise 1.5.3 method, print out each digit of 2022 in reverse line by line.  \n",
@@ -871,7 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "e94c8544",
+   "id": "272506f5",
    "metadata": {},
    "outputs": [
     {
@@ -1224,7 +1303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5a474d6",
+   "id": "e39f2a5a",
    "metadata": {},
    "outputs": [],
    "source": []
