Finished editing lecture 3 and lecture 3 answers.

--- a/Fall_2022_Lectures/Lecture_3/Lecture-Numpy and Pandas (Answers).ipynb
+++ b/Fall_2022_Lectures/Lecture_3/Lecture-Numpy and Pandas (Answers).ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -23,12 +21,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Exercise**: How would you sum the 3rd and 4th element of v?"
+    "## NumPy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 1**: How would you sum the 3rd and 4th element of v?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,23 +45,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Exercise:** What if you wanted the 3x3 matrix at the left of A (everything but the rightmost column)?"
+    "**Exercise 2:** What if you wanted the 3x3 matrix at the left of A (everything but the rightmost column)?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[  0,  -3,  -3,  -1],\n",
-       "       [-11,  -3,   4,  -6],\n",
-       "       [  8,  20,   1, -14]])"
+       "array([[ 21,  13, -11,  -7],\n",
+       "       [ -3, -10,   6,   9],\n",
+       "       [-12,   2,  -8,  14]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,18 +75,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[  0,  -3,  -3],\n",
-       "       [-11,  -3,   4],\n",
-       "       [  8,  20,   1]])"
+       "array([[ 21,  13, -11],\n",
+       "       [ -3, -10,   6],\n",
+       "       [-12,   2,  -8]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,24 +99,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Exercise:** Let's try to select the 2x2 matrix at the bottom righthand corner of the A matrix from the last exercise.\n",
+    "**Exercise 3:** Let's try to select the 2x2 matrix at the bottom righthand corner of the A matrix from the last exercise **using only negative values**.\n",
     "\n",
     "Like before, leaving the 2nd argument blank in both slices below tells it to run all the way to the end."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[  4,  -6],\n",
-       "       [  1, -14]])"
+       "array([[ 6,  9],\n",
+       "       [-8, 14]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,64 +129,91 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Exercise:** What if we want to add a constant vector to each row of a matrix? In the following example, the sizes of the arrays are different, so the sum is performed elementwise. We want to create a `row_vector` that when added to `an_array`, returns the `given` matrix."
+    "**Exercise 4:** What if we want to add a constant vector to each row of a matrix? In the following example, the sizes of the arrays are different, so the sum is performed elementwise. We want to create a `row_vector` that when added to `an_array`, returns the `given` matrix."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "vector = np.array([1, 0, 1])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Exercise:** Let's try an example with another 2D matrix. Uncomment A (again by deleting the #) and erase the underscore blanks, filling in numbers to make the output equal to ```[3, 12, 8]```."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "A = [[2, 3, 5], [1, 9, 3]]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Exercise:** What if we only want the numbers that are less than the mean of all the elements of the matrix?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.88378525,  0.80366141,  0.89747615,  0.5627162 ])"
+       "array([[ 2,  2,  4],\n",
+       "       [ 5,  5,  7],\n",
+       "       [ 8,  8, 10]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "given = np.array([[2, 2, 4], [5, 5, 7], [8, 8, 10]])\n",
+    "an_array = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+    "# Answer\n",
+    "vector = np.array([1, 0, 1])\n",
+    "\n",
+    "the_sum = an_array + vector\n",
+    "the_sum"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 5:** Let's try an example with another 2D matrix. Uncomment A (again by deleting the #) and erase the underscore blanks, filling in numbers to make the output equal to ```[3, 12, 8]```."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 3, 12,  8])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = [[2, 3, 5], [1, 9, 3]]\n",
+    "np.sum(A, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 6:** What if we only want the numbers that are less than the mean of all the elements of the matrix?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.32951252, 0.17276745, 0.18815302, 0.10902515, 0.3282232 ])"
+      ]
+     },
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "random_matrix = np.random.rand(3, 3)\n",
-    "random_matrix[random_matrix > random_matrix.mean()]"
+    "random_matrix[random_matrix < random_matrix.mean()]"
    ]
   },
   {
@@ -195,24 +227,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Exercise:** Given the `rounded_matrix` below, first retrieve only the first 3 columns; name this `halved_matrix`. Then sum the `halved_matrix` row wise."
+    "**Exercise 7:** Given the `rounded_matrix` below, first retrieve only the first 3 columns; name this `halved_matrix`. Then sum the `halved_matrix` row wise."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-2, -1,  1,  1,  0, -1],\n",
-       "       [ 0,  0,  0,  0,  1,  0],\n",
-       "       [ 0, -1,  0, -1,  0,  1],\n",
-       "       [ 0,  0,  0,  0,  0,  0]])"
+       "array([[ 0,  0,  0,  0,  0,  1],\n",
+       "       [ 0,  1,  0,  0,  0,  0],\n",
+       "       [ 0,  0,  1,  0,  0, -1],\n",
+       "       [ 0, -1,  0,  0,  0,  0]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "metadata": {
     "scrolled": true
    },
@@ -245,19 +277,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Exercise:** Uncomment the x and fill in the 2 blanks so that x + y = z."
+    "**Exercise 8:** Uncomment the x and fill in the 2 blanks so that x + y = z."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "metadata": {
-    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "x = np.array([1, 2])"
+    "# answer\n",
+    "x = np.array([1, 2])\n",
+    "\n",
+    "y = np.array([[3], [4]])\n",
+    "z = np.array([[4, 5], [5, 6]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4, 5],\n",
+       "       [5, 6]])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x + y"
    ]
   },
   {
@@ -271,27 +327,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have 2 arrays, an array `x` consisting of some numbers and an array `y` consisting of letters that correspond to each number. Let's say we only want the letters whose numbers are negative. How would we do that?"
+    "**Exercise 9:** We have 2 arrays, an array `x` consisting of some numbers and an array `y` consisting of letters that correspond to each number. Let's say we only want the letters whose numbers are negative. How would we do that?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'y' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-23-af8fbdef5898>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0my\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'y' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "array(['s', 'a', 'a', 's', 'i', 's', 'c', 'o', 'o', 'l'], dtype='<U1')"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "x = np.array([-3, 1, 4, -9, 6, 4, 6, -2, -3, 5, 3, -5, 21, -3, 2, 1, -2, 3, 4, -3, 1, -2, -1])\n",
+    "y = np.array(['s','e','f','a','z','r','i','a','s','e','s','i','p','s','e','s','c','w','c','o','m','o','l'])\n",
+    "# Answer\n",
     "y[x < 0]"
    ]
   },
@@ -304,10 +362,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 37,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# importing titanic dataset\n",
@@ -326,21 +382,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Exercise**: Find the total fare spent by females aboard the Titanic."
+    "**Exercise 1**: Find the total fare spent by females aboard the Titanic."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "13966.66279999999"
+       "13966.6628"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,29 +417,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Exercise:** Find the mean age of males and females on the titanic."
+    "**Exercise 2:** Find the mean age of males and females on the titanic."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -417,7 +473,7 @@
        "male    30.726645"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,29 +493,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Excercise**: Find the average age of passengers who did/didn't survive for each ticket class."
+    "**Exercise 3**: Find the average age of passengers who did/didn't survive for each ticket class."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -503,7 +559,7 @@
        "3         26.555556  20.646118"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,15 +571,6 @@
     "               values='Age',        # Values in table\n",
     "               aggfunc=np.mean) # Aggregation function"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
