--- a/Fall_2022_Lectures/Lecture_3/Numpy Pandas Homework/Numpy and Pandas Homework (Answers).ipynb
+++ b/Fall_2022_Lectures/Lecture_3/Numpy Pandas Homework/Numpy and Pandas Homework (Answers).ipynb
@@ -8,6 +8,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import random"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -16,12 +27,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3008"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "big_array = np.arange(1, 193, 3)\n",
     "np.sum(big_array[big_array % 2 == 1])"
    ]
   },
@@ -34,12 +55,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-11., -13.,   1.],\n",
+       "       [ -9.,  16.,  33.],\n",
+       "       [ -3.,   1.,  -3.]])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "A = np.array([[-12, -13, 1], [-9, 15, 33], [-3, 1, -4]])\n",
+    "np.random.seed(50) #this just makes it so everyone has the same random matrix\n",
+    "random = (np.random.randn(4, 6) * 10).astype(int)\n",
     "random[1:5, 2:5] + np.eye(3, 3)"
    ]
   },
@@ -52,11 +87,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.0625"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "big_part = random[:3, :5].reshape((1, 15))\n",
     "negative_1 = random[3][5]\n",
@@ -78,10 +122,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 48,
+   "metadata": {},
    "outputs": [],
    "source": [
     "x = np.array([3.0, 5.0, 8.0])\n",
@@ -104,21 +146,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([82, 68, 42])"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "np.random.seed(30)\n",
+    "prices = np.absolute((np.random.randn(8, 3) * 10).astype(int))\n",
     "prices.sum(axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 52,
+   "metadata": {},
    "outputs": [],
    "source": [
     "cheapest_store = \"C\""
@@ -133,11 +184,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 0, 1]])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "vector = np.array([3, 1, -3])\n",
     "an_array = np.array([[-2, -1, 3], [-3, 0, 3], [-3, -1, 4]])\n",
@@ -154,13 +216,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
-    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
    "source": [
+    "y = np.array([[3], [-2]])\n",
+    "z = np.array([[-4, 10], [-9, 5]])\n",
     "x = np.array([-7, 7])"
    ]
   },
@@ -173,12 +236,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ja343\\AppData\\Local\\Temp\\ipykernel_2504\\2735090504.py:3: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  y[np.sqrt(x) == 2]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array(['r', 'u', 'b'], dtype='<U1')"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "x = np.array([-3, 1, 4, -9, 6, 4, 6, -2, -3, 5, 3, -5, 21, -3, 2, 1, -2, 3, 4, -3, 1, -2, -1])\n",
+    "y = np.array(['s','e','r','u','z','u','i','s','a','e','s','i','p','s','e','s','c','w','b','o','m','o','l'])\n",
     "y[np.sqrt(x) == 2]"
    ]
   },
@@ -191,21 +273,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 59,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "x, b = np.arange(1000).reshape(1000, 1), np.ones((1000, 1))\n",
+    "\n",
+    "X = np.append(x, b, axis=1)\n",
+    "#all you need to know is that this is the X you will use in the equation below\n",
+    "\n",
+    "Y = 2 * x[:,0] + 4*b + np.random.random()\n",
+    "#all you need to know is that this is the Y you will use in the equation below\n",
     "theta_hat = np.linalg.solve((X.T @ X), (X.T @ Y))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 60,
+   "metadata": {},
    "outputs": [],
    "source": [
     "loss = np.dot(np.linalg.norm(Y - (X @theta_hat)), np.linalg.norm(Y - (X @ theta_hat)))"
@@ -220,12 +305,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import titanic dataset\n",
+    "titanic = pd.read_csv(\"train.csv\")\n",
+    "titanic = titanic.set_index(\"PassengerId\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {
-    "collapsed": true,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "44.47981783439487"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "male = titanic[titanic[\"Sex\"] == \"male\"]\n",
     "male_avg = male[\"Fare\"].mean()\n",
@@ -245,11 +351,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28.343689655172415"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "survived = titanic[titanic[\"Survived\"] == 1]\n",
     "age_survived = survived[\"Age\"].mean()\n",
@@ -258,11 +373,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30.62617924528302"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "died = titanic[titanic[\"Survived\"] == 0]\n",
     "age_died = died[\"Age\"].mean()\n",
@@ -278,10 +402,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class_1 = titanic[titanic[\"Pclass\"] == 1]\n",
@@ -292,10 +414,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class_2 = titanic[titanic[\"Pclass\"] == 2]\n",
@@ -306,10 +426,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class_3 = titanic[titanic[\"Pclass\"] == 3]\n",
@@ -317,11 +435,201 @@
     "total_3 = len(class_3)\n",
     "proportion_3 = survived_3 / total_3"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 13.1**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import netflix dataset\n",
+    "netflix = pd.read_csv(\"netflix_titles.csv\")\n",
+    "netflix = netflix.set_index('show_id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>release_year</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1925</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1942</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1943</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1944</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1945</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017</th>\n",
+       "      <td>1032</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018</th>\n",
+       "      <td>1147</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019</th>\n",
+       "      <td>1030</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020</th>\n",
+       "      <td>953</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021</th>\n",
+       "      <td>592</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>74 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              title\n",
+       "release_year       \n",
+       "1925              1\n",
+       "1942              2\n",
+       "1943              3\n",
+       "1944              3\n",
+       "1945              4\n",
+       "...             ...\n",
+       "2017           1032\n",
+       "2018           1147\n",
+       "2019           1030\n",
+       "2020            953\n",
+       "2021            592\n",
+       "\n",
+       "[74 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_titles_per_year = netflix.groupby(\"release_year\")[[\"title\"]].count()\n",
+    "num_titles_per_year"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 13.2:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1147"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_titles_per_year['title'].max()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 13.3:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "119.01351351351352"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_titles_per_year['title'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -335,7 +643,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
