added test files

--- a/Fall_2022_Kaggle/Kaggle_EDA/Kaggle_EDA_blank.ipynb
+++ b/Fall_2022_Kaggle/Kaggle_EDA/Kaggle_EDA_blank.ipynb
@@ -3,20 +3,36 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello world\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "gf951CbOyz2p",
+    "outputId": "d2186bfa-79c3-4d82-91a2-98ba9dd09df9"
+   },
+   "outputs": [],
    "source": [
-    "def func():\n",
-    "    print(\"hello world\")\n",
-    "func()"
+    "import pandas as pd \n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# CX Kaggle Competition: Salary Prediction\n",
+    "\n",
+    "### Table of Contents\n",
+    "\n",
+    "* [1. Data Loading](#loading)\n",
+    "* [2. Exploring the Features](#features)\n",
+    "* [3. Exploring the ```Salary``` Response](#response)\n",
+    "* [4. Relationships between Features and Response](#relations)\n",
+    "\n",
+    "### Hosted by and maintained by the [SAAS](https://saas.berkeley.edu). Authored by Carlos Gonzalez and Suparna Kompalli. "
    ]
   },
   {
@@ -29,7 +45,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -43,9 +59,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.12"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
@@ -53,5 +68,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
