pushing draft kaggle

--- a/Spring_2022_Kaggle/Current/Kaggle_EDA/Kaggle_EDA_sols.ipynb
+++ b/Spring_2022_Kaggle/Current/Kaggle_EDA/Kaggle_EDA_sols.ipynb
@@ -1237,7 +1237,9 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "79e8dfd3-3c1d-4bb8-bace-1e984807757c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
