pushing draft kaggle

--- a/Fall_2022_Kaggle/Kaggle_EDA/Kaggle_EDA_blank.ipynb
+++ b/Fall_2022_Kaggle/Kaggle_EDA/Kaggle_EDA_blank.ipynb
@@ -1378,7 +1378,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question 14:** Whew! We've done a lot of plotting and interpretation. Based on what you've seen so far, which features do you think are promising in terms of ? "
+    "**Question 14:** Whew! We've done a lot of plotting and interpretation. Based on what you've seen so far, which features do you think are promising in terms of price_range? "
    ]
   },
   {
