--- a/Fall_2022_Lectures/Lecture_4/Homework.ipynb
+++ b/Fall_2022_Lectures/Lecture_4/Homework.ipynb
@@ -9,7 +9,7 @@
     "*Given on October 11, 2022*\n",
     "\n",
     "[(SAAS)](https://saas.berkeley.edu) <br/>\n",
-    "Authors: Carlos Gonzalez, Claire Mai <br/>"
+    "Presented by Carlos Gonzalez, Claire Mai <br/>"
    ]
   },
   {
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Remove any of the bad data points you found above."
+    "From the histogram above, we will define \"bad\" data points as those exceeding an age of 100. You can't exactly see where the point is but since the histogram extends to 500+, you know it is around there. In the cell below, remove the bad data points, and assign this new table to ```income_age_bad```."
    ]
   },
   {
@@ -144,7 +144,7 @@
     }
    ],
    "source": [
-    "..."
+    "income_age_bad = ..."
    ]
   },
   {
@@ -171,7 +171,8 @@
     }
    ],
    "source": [
-    "..."
+    "#Just print the dataframe\n",
+    "income"
    ]
   },
   {
@@ -180,14 +181,16 @@
    "source": [
     "How are null values represented in this dataset?\n",
     "\n",
-    "_answer here_"
+    "**Answer:**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Filter out all the rows that contain null values."
+    "Now suppose we don't want to work with any data with null values. In the cell below, filter out all the rows that contain null values and assign this new Datafram to ```income_dropped```.\n",
+    "\n",
+    "*Hint:* the ```pandas.DataFrame.dropna()``` function may be useful here."
    ]
   },
   {
@@ -207,7 +210,7 @@
     }
    ],
    "source": [
-    "..."
+    "income_dropped = ..."
    ]
   },
   {
@@ -221,34 +224,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question:** What is the age distribution like for this data set? What are the minimum, maximum, median age for this data set? Use income_dropped in your analysis"
+    "**Question:** What is the age distribution like for ```income_dropped```? What are the minimum, maximum, median age for this data set?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Ellipsis"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "min: Ellipsis, median: Ellipsis, max Ellipsis\n"
+     ]
     }
    ],
    "source": [
-    "..."
+    "min_dropped = ...\n",
+    "median_dropped = ...\n",
+    "max_dropped = ...\n",
+    "\n",
+    "print(f\"min: {min_dropped}, median: {median_dropped}, max {max_dropped}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plot the age distribution with a histogram. Make sure to exclude any outliers you found in the previous part. "
+    "Plot the age distribution of ```income_dropped``` with a histogram. Make sure to exclude any outliers you found in the previous part. "
    ]
   },
   {
@@ -303,7 +307,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Open ended question:** Choose one other independent variable (either workclass or gender): are there outliers? Is the distribution representative of the population? What is the percent breakdown? Do you think this percentage is representative of the US population? <br>"
+    "**Open ended question:** Choose one other independent variable (either workclass or gender) to answer the following:\n",
+    "\n",
+    "Do outliers exist? Is the distribution representative of the sample population? What is the percent breakdown? <br>\n",
+    "\n",
+    "*You may load extra cells to support your answer*"
    ]
   },
   {
@@ -338,7 +346,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Which columns need one-hot encoding?\n",
+    "Which columns in ```income``` need one-hot encoding?\n",
     "\n",
     "**Answer:**"
    ]
@@ -347,7 +355,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Apply one-hot encoding to those columns. Hint: use `get_dummies()`"
+    "Apply one-hot encoding to those columns. Hint: use `get_dummies()`. [Documentation here](https://pandas.pydata.org/docs/reference/api/pandas.get_dummies.html)"
    ]
   },
   {
@@ -374,7 +382,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To put everything together, create a histogram that displays the number of people with over and under 50k income for each gender."
+    "To put everything together, create a histogram that displays the number of people with over and under 50k income for each gender.\n",
+    "\n",
+    "*Hint:* Use ```hue```"
    ]
   },
   {
